--- a/practice/dialog1/dialog1.html
+++ b/practice/dialog1/dialog1.html
@@ -7,6 +7,8 @@
     <script src="dialog1.js"></script>
 </head>
 <body>
-
+<p>啊哈哈哈哈哈哈哈啊哈哈哈啊哈啊哈哈哈哈啊哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+<p>啊哈哈哈哈哈哈哈啊哈哈哈啊哈啊哈哈哈哈啊哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+<p>啊哈哈哈哈哈哈哈啊哈哈哈啊哈啊哈哈哈哈啊哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
 </body>
 </html>
