--- a/login/login.html
+++ b/login/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>登录页面</title>
+    <link rel="stylesheet" href="../common/style/common.css">
     <link rel="stylesheet" href="login.css">
     <script src="login.js"></script>
 </head>
