调整项目结构

--- a/public/html/mineCollection.html
+++ b/public/html/mineCollection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>个人中心-我的收藏-小说收藏页面</title>
-    <link rel="stylesheet" type="text/css" href="../mine.css" />
+    <link rel="stylesheet" type="text/css" href="mine.css" />
 </head>
 <body>
 <article class="coll-article">
