调整项目结构

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -17,7 +17,10 @@
         <label for="password">密码</label>
         <input type="password" name="account" id="password">
     </p>
-    <input type="submit" value="提交" class="submit" id="submit">
+    <p>
+        <span class="btn blue">提交</span>
+        <span class="btn">取消</span>
+    </p>
 </form>
 </body>
 </html>
