--- a/public/html/register.html
+++ b/public/html/register.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>注册页面</title>
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="register.css">
 </head>
 <body>
@@ -60,12 +61,16 @@
             </select>
             &nbsp;日
         </p>
-        <label for = "hobby">兴趣爱好</label>
-        <input type="text" name="hobby" id="hobby">
+        <p>
+            <label for = "hobby">兴趣爱好</label>
+            <input type="text" name="hobby" id="hobby">
+        </p>
+        <p>
+        </p>
     </fieldset>
     <p class="button">
-        <input type="submit" value="提交">&nbsp;&nbsp;
-        <input type="reset" value="重置">
+        <span class="btn blue">提交</span>
+        <span class="btn blue">重置</span>
     </p>
 </form>
 <div class="test"></div>
