--- a/public/html/dialog.html
+++ b/public/html/dialog.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>弹窗测试</title>
+    <link rel="stylesheet" href="common.css">
     <link href="dialog.css" type="text/css" rel="stylesheet">
     <script src="dialog1.js"></script>
 </head>
