--- a/public/html/loading.html
+++ b/public/html/loading.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>加载页面</title>
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" type="text/css" href="loading.css" />
 </head>
 <body>
