--- a/public/html/picture.html
+++ b/public/html/picture.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>图集详情页面</title>
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="pictures.css" />
 </head>
 <body>
